--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,13 @@ gemfile:
   - gemfiles/rails_4_2.gemfile
   - Gemfile
 matrix:
+  exclude:
+    - rvm: 2.4.0
+      gemfile: gemfiles/rails_4_0.gemfile
+    - rvm: 2.4.0
+      gemfile: gemfiles/rails_4_1.gemfile
+    - rvm: 2.4.0
+      gemfile: gemfiles/rails_4_2.gemfile
   allow_failures:
     - rvm: ruby-head
   fast_finish: true
