Follow gemfile naming pattern.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ gemfile:
   - gemfiles/rails_4_0.gemfile
   - gemfiles/rails_4_1.gemfile
   - gemfiles/rails_4_2.gemfile
-  - gemfiles/rails_5.0.gemfile
+  - gemfiles/rails_5_0.gemfile
   - gemfiles/rails_master.gemfile
   - Gemfile
 matrix:
