--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,11 @@ language: ruby
 sudo: false
 cache: bundler
 rvm:
-  - 2.2.6
-  - 2.3.1
-  - 2.4.1
+  - 2.2.10
+  - 2.3.8
+  - 2.4.6
+  - 2.5.5
+  - 2.6.3
   - ruby-head
 gemfile:
   - gemfiles/rails_4_2.gemfile
@@ -12,6 +14,15 @@ gemfile:
   - gemfiles/rails_master.gemfile
   - Gemfile
 matrix:
+  exclude:
+    - rvm: 2.6.3
+      gemfile: gemfiles/rails_4_2.gemfile
+    - rvm: 2.6.3
+      gemfile: gemfiles/rails_5_0.gemfile
+    - rvm: 2.5.5
+      gemfile: gemfiles/rails_4_2.gemfile
+    - rvm: 2.5.5
+      gemfile: gemfiles/rails_5_0.gemfile
   allow_failures:
     - rvm: ruby-head
     - gemfile: gemfiles/rails_master.gemfile
