--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ rvm:
 gemfile:
   - gemfiles/rails_4_2.gemfile
   - gemfiles/rails_5_0.gemfile
+  - gemfiles/rails_5_1.gemfile
   - gemfiles/rails_master.gemfile
   - Gemfile
 matrix:
@@ -24,6 +25,8 @@ matrix:
       gemfile: gemfiles/rails_4_2.gemfile
     - rvm: 2.6.3
       gemfile: gemfiles/rails_5_0.gemfile
+    - rvm: 2.6.3
+      gemfile: gemfiles/rails_5_1.gemfile
     - rvm: 2.5.5
       gemfile: gemfiles/rails_4_2.gemfile
     - rvm: 2.5.5
