rails 4.2 doesn't support ruby 2.7

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ gemfile:
   - Gemfile
 matrix:
   exclude:
+    - rvm: ruby-head
+      gemfile: gemfiles/rails_4_2.gemfile
     - rvm: 2.6.3
       gemfile: gemfiles/rails_4_2.gemfile
     - rvm: 2.6.3
