--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ gemfile:
   - gemfiles/rails_4_2.gemfile
   - gemfiles/rails_5_0.gemfile
   - gemfiles/rails_5_1.gemfile
+  - gemfiles/rails_5_2.gemfile
   - gemfiles/rails_master.gemfile
   - Gemfile
 matrix:
@@ -27,6 +28,8 @@ matrix:
       gemfile: gemfiles/rails_5_0.gemfile
     - rvm: 2.6.3
       gemfile: gemfiles/rails_5_1.gemfile
+    - rvm: 2.6.3
+      gemfile: gemfiles/rails_5_2.gemfile
     - rvm: 2.5.5
       gemfile: gemfiles/rails_4_2.gemfile
     - rvm: 2.5.5
